# ITSTools

./: .gitignore  .project  .travis.yml  README.md  ajoutTest  artifacts.xml.xz  content.xml.xz  p2.index  plugin.xml_gen  pom.xml
ITS-commandline/: .project  .travis.yml  README.md  fr.lip6.move.gal.product  install_eclipse.sh  runeclipse.sh
PNMLToGAL/: .project  plugin.xml
cluster/: philo50.txt
docs/: index.html
fr.lip6.move.GAL/: .project  plugin.xml_gen
fr.lip6.move.GAL.tests/: .project
fr.lip6.move.GAL.ui/: .project
fr.lip6.move.coloane.emf.model/: plugin.xml  pom.xml
fr.lip6.move.coloane.emf.xtext.model.resource/: .project  pom.xml
fr.lip6.move.coloane.emf.xtext.model.resource.ui/: .project  plugin.xml  pom.xml
fr.lip6.move.coloane.itsdsl/: plugin.xml
fr.lip6.move.coloane.itsdsl.ui/: .project  plugin.xml_gen
fr.lip6.move.divine.togal/: plugin.xml  pom.xml
fr.lip6.move.divine.xtext/: .project  plugin.xml_gen  pom.xml
fr.lip6.move.divine.xtext.tests/: .project  fr.lip6.move.promela.xtext.tests.launch
fr.lip6.move.divine.xtext.ui/: plugin.xml  pom.xml
fr.lip6.move.egal/: .classpath  .project
fr.lip6.move.gal.contribution/: .project  pom.xml
fr.lip6.move.gal.contribution.feature/: .project  feature.xml  pom.xml
fr.lip6.move.gal.contribution.parent/: .project  pom.xml
fr.lip6.move.gal.contribution.ui/: .project  plugin.xml
fr.lip6.move.gal.contribution.updatesite/: .project
fr.lip6.move.gal.converter/: .project  plugin.xml
fr.lip6.move.gal.feature.core/: .project  feature.xml  pom.xml
fr.lip6.move.gal.feature.ltsmin/: .project  feature.xml  pom.xml
fr.lip6.move.gal.ide/: pom.xml
incubation/cpn_invariants/: .project  Makefile.am
incubation/cpn_invariants/interfaces/: MacaoMontrer.h  MacaoProc.h  TypeLocal.h  TypeMacao.h  classe.h  compmonome.h  compvecteur.h  domaine.h  entiervariable.h  fonction.h  fonctionelementaire.h  iocomposition.c  iofichier.h  iofonction.h  iomatrice.h  iovariable.h  iovecteur.h  matrice.h  menu.h  monome.h  reduction.h  vecteur.h
incubation/cpn_invariants/sources/: fonctionelementaire.c  iodomaine.c  iofonction.c  iomatrice.c  iopoly.c  ioreseau.c  poly.c  reduction.c  variable.c  vecteur.c
incubationComponents/cpn_invariants/: AUTHORS  configure.ac
incubationComponents/cpn_invariants/interfaces/: CListes.h  FKServVersions.h  MacaoArc.h  MacaoReduction.h  TypeAtelier.h  compfonction.h  compmatrice.h  composition.c  composition.h  compositionmulti.c  compositionmulti.h  comppoly.h  flots.h  iocomposition.h  iodomaine.h  ioentiervariable.h  iomonome.h  iopoly.h  ioreseau.h  liste.c  liste.h  menubis.h  poly.h  taillechaine.h  variable.h
incubationComponents/cpn_invariants/sources/: CListes.c  MacaoArc.c  MacaoMontrer.c  classe.c  domaine.c  entiervariable.c  flots.c  fonction.c  ioentiervariable.c  iofichier.c  iomonome.c  iovariable.c  iovecteur.c  matrice.c  monome.c  t_reduction.c
(+5087 files in other folders)
