bin_PROGRAMS        =	cpn_invariants

cpn_invariants_SOURCES  = 	sources/MacaoArc.c \
				sources/MacaoMontrer.c \
				sources/classe.c \
				sources/domaine.c \
				sources/entiervariable.c \
				sources/flots.c \
				sources/fonction.c \
				sources/fonctionelementaire.c \
				sources/iodomaine.c \
				sources/ioentiervariable.c \
				sources/iofichier.c \
				sources/iofonction.c \
				sources/iomatrice.c \
				sources/iomonome.c \
				sources/iopoly.c \
				sources/ioreseau.c \
				sources/iovariable.c \
				sources/iovecteur.c \
				sources/matrice.c \
				sources/monome.c \
				sources/poly.c \
				sources/reduction.c \
				sources/t_reduction.c \
				sources/variable.c \
				sources/vecteur.c \
				interfaces/MacaoArc.h \
				interfaces/MacaoMontrer.h \
				interfaces/MacaoProc.h \
				interfaces/MacaoReduction.h \
				interfaces/TypeAtelier.h \
				interfaces/TypeLocal.h \
				interfaces/TypeMacao.h \
				interfaces/classe.h \
				interfaces/compfonction.h \
				interfaces/compmatrice.h \
				interfaces/compmonome.h \
				interfaces/composition.h \
				interfaces/compositionmulti.h \
				interfaces/comppoly.h \
				interfaces/compvecteur.h \
				interfaces/domaine.h \
				interfaces/entiervariable.h \
				interfaces/flots.h \
				interfaces/fonction.h \
				interfaces/fonctionelementaire.h \
				interfaces/iocomposition.h \
				interfaces/iodomaine.h \
				interfaces/ioentiervariable.h \
				interfaces/iofichier.h \
				interfaces/iofonction.h \
				interfaces/iomatrice.h \
				interfaces/iomonome.h \
				interfaces/iopoly.h \
				interfaces/ioreseau.h \
				interfaces/iovariable.h \
				interfaces/iovecteur.h \
				interfaces/liste.h \
				interfaces/matrice.h \
				interfaces/menu.h \
				interfaces/menubis.h \
				interfaces/monome.h \
				interfaces/poly.h \
				interfaces/reduction.h \
				interfaces/taillechaine.h \
				interfaces/variable.h \
				interfaces/vecteur.h \
				interfaces/Clistes.c \
				interfaces/Clistes.h 
				

# pourquoi des .c dans les interfaces?
EXTRA_DIST  =	interfaces/composition.c \
		interfaces/compositionmulti.c \
		interfaces/iocomposition.c \
		interfaces/liste.c

cpn_invariants_CPPFLAGS =	-I$(srcdir)/interfaces 

cpn_invariants_CFLAGS = -O2 -Wall -W
