AC_PREREQ(2.59)
AC_INIT([cpn_invariants],[1.0])
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE([-Wall])

AC_CONFIG_SRCDIR([interfaces/classe.h])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_STDBOOL
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_MALLOC
AC_TYPE_SIGNAL
AC_CHECK_FUNCS([strchr])


AC_CONFIG_FILES([Makefile])

AC_OUTPUT
